# pie-hermes

./: .gitignore  .gitmodules  README.md  pyproject.toml
bench/: __init__.py  analyze.py  analyze_pressure.py  analyze_tool_reliability.py  capture_hook.py  check_probes.py  correctness_high_c.py  cost_projection.py  diff_responses.py  drive_pressure.py  drive_replay_pressure.py  driver.py  install.py  install_optimizers.py  mempressure.py  pie_health_probe.py  pressure_scenarios.py  replay_pressure.py  wedge_repro.py
bench/optimizers/: __init__.py  composite.py  ephemeral_oob.py  variant_swap.py
bench/scenarios/: tool_reliability_subset.md
bootstrap/: sitecustomize.py
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/: analysis.txt  manifest.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/deep-breadth-audit/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/deep-git-audit/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/deep-multi-read/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/deep-search-read/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/shallow-file-head/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/shallow-hello/: capture.jsonl  meta.json
captures/runs/2026-04-21T17-42-49_pie-qwen2.5-72b-awq_round2-deep/scenarios/shallow-terminal/: capture.jsonl  meta.json
configs/: cli-config.pie.gemini-branded.yaml  cli-config.pie.gpt-branded.yaml  cli-config.pie.yaml  cli-config.qwen35.yaml
deploy/: COMPATIBILITY.md
inferlets/hermes-openai-compat/: Cargo.toml  Pie.toml  VENDOR_SOURCE.md
inferlets/hermes-openai-compat/src/: block_cache.rs  constrained_sampler.rs  context_section.rs  fork_validate.rs  handler.rs  lib.rs  prompt_cache.rs  prompt_render.rs  session_cache.rs  stop_conditions.rs  tool_format.rs  tool_parser.rs  tools_grammar.rs  types.rs  variant.rs
inferlets/hermes-openai-compat/tests/: test_block_cache_lru.rs  test_no_sync_eprintln.rs
pie_hermes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build-inferlet.sh  debug-idea-g.sh  deploy-hermes-inferlet.sh  export-variant-kv.py  run_in_container.sh
tests/: conftest.py  test_analyze_pressure.py  test_build_script.py  test_capture_hook.py  test_check_probes.py  test_diff_responses.py  test_drive_pressure.py  test_driver_scenarios.py  test_export_variant_kv.py  test_inferlet_build.py  test_install_optimizers.py  test_pressure_scenarios.py  test_replay_pressure.py  test_run_in_container.py  test_sdk_primitives.py  test_submodules.py
